# dex

./: .gitmodules  CMakeLists.txt  README.md
doc/: README.md
examples/: example.txt  input.txt
include/dex/: builtincommand.h  command.h  commandspan.h  dex.h  endoflinenode.h  gluenode.h  groupnode.h  list.h  node.h  parser.h  rootenvironment.h  spacenode.h  state.h  usercommand.h  userenvironment.h  useroutput.h  value.h  variant.h  wordnode.h
include/dex/api/: api.h  file.h  liquid.h  print.h
include/dex/core/: json.h  list.h  null.h  options.h  output.h  ref.h  serialization.h  utils.h
include/dex/liquid/: context.h  filter.h  filters.h  liquid.h  liquidparser.h  template.h  template_p.h
include/dex/processor/: bracketsarguments.h  builtincommand.h  command.h  commandspan.h  documentprocessor.h  endoflinenode.h  environment.h  groupnode.h  node.h  output.h  parser.h  rootenvironment.h  spacenode.h  state.h  usercommand.h  userenvironment.h  useroutput.h  wordnode.h
lib/: CMakeLists.txt
lib/config/libscript/: config.h  engineimpl-members.incl  engineimpl.h  string.cpp  typeids.incl  value-members.incl  value.cpp  value.h  valueimpl.h
lib/libscript/: engine_members.h  engine_source.cpp  injected_typeflags.h  libscriptconfig.h  string.src  value_impl_header.h  value_members.h  value_source.cpp
patch/: libscript.patch  liquid.patch
profiles/default/: README.md  node.dex  parser.dex  state.dex
profiles/default/commands/: b.dex  brief.dex  class.dex  commands.dex  font.dex  list.dex
profiles/default/model/: class.dex  code.dex  font.dex  function.dex  link.dex  list.dex  node.dex  type.dex
profiles/default/nodes/: class.dex  code.dex  function.dex  link.dex  list.dex  type.dex
profiles/default/output/: markdown.dex  template-class.md
src/: bracketsarguments.cpp  builtincommand.cpp  command.cpp  commandspan.cpp  dex.cpp  endoflinenode.cpp  environment.cpp  file.cpp  gluenode.cpp  groupnode.cpp  list.cpp  main.cpp  node.cpp  parser.cpp  ref.cpp  rootenvironment.cpp  spacenode.cpp  state.cpp  usercommand.cpp  userenvironment.cpp  useroutput.cpp  value.cpp  variant.cpp  wordnode.cpp
src/api/: api.cpp  file.cpp  liquid.cpp  print.cpp
src/core/: json.cpp  list.cpp  null.cpp  options.cpp  output.cpp  ref.cpp  serialization.cpp  utils.cpp  value.cpp  variant.cpp
src/liquid/: context.cpp  filter.cpp  liquid.cpp  liquidparser.cpp  template.cpp
src/processor/: bracketsarguments.cpp  builtincommand.cpp  command.cpp  commandspan.cpp  documentprocessor.cpp  endoflinenode.cpp  environment.cpp  eol.cpp  groupnode.cpp  node.cpp  parser.cpp  rootenvironment.cpp  space.cpp  spacenode.cpp  state.cpp  usercommand.cpp  userenvironment.cpp  useroutput.cpp  wordnode.cpp
tests/: CMakeLists.txt  main.cpp  tests_liquid.cpp
